Fixed stretching issue when re-sizing page

--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,11 @@
-body {
-  max-width: 600px;
-  text-align: center;
+body {  max-width: 600px;
 }
 .container {
   border: 2px solid grey;
   border-radius: 15px;
   margin: 40px;
   padding: 20px 5px;
+  text-align: center;
 }
 
 .sun-emoji {
